<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
  <string name="app_name">Wallet Cracker</string>
  <string name="wallet_not_found">Google Wallet does not appear to be installed on your device</string>
  <string name="loading">Loading&#8230;</string>
  <string name="error">Error</string>
  <string name="loading_wallet">Loading data from Google Wallet&#8230;</string>
  <string name="package_google_wallet">com.google.android.apps.walletnfcrel</string>
  <string name="init_success">Successfully Initialized&#8230;</string>
  <string name="root_not_found">This application requires root to function</string>
  <string name="unknown_init_error">Unknown Initialization Error</string>
  <string name="wallet_db_path">/databases/walletDatastore</string>
  <string name="db_name">walletDatastoreCopy</string>
  <string name="script_rootcopy">rootcopy.sh</string>
  <string name="wallet_uuid">Google Wallet Unique User ID</string>
  <string name="pin_info">Pin Information</string>
  <string name="salt">Salt</string>
  <string name="pin_hash">SHA-256 Hash</string>
  <string name="bad_pin_attempts">Bad PIN Attempts</string>
  <string name="pin_expired">PIN Expired</string>
  <string name="gaia_account">Google Wallet Account</string>
  <string name="c2dmreginfo">C2DM Registration</string>
  <string name="virgin">Virgin</string>
  <string name="setup_complete">Setup Complete</string>
  <string name="id">ID</string>
  <string name="is_registered">Is Registered</string>
  <string name="originator_id">Originator</string>
  <string name="local_id">Local</string>
  <string name="android_id">Android ID</string>
  <string name="tsa_status">Trusted Service Account</string>
  <string name="updated_at_ms">Updated At</string>
  <string name="gaia_account_missing">Google Wallet Account Missing</string>
  <string name="number">Number</string>
  <string name="cplc">Card Production Lifecycle Data</string>
  <string name="secure_element_initialized">Secure Element Initialized</string>
  <string name="secure_element_activation_complete">Secure Element Activation Complete</string>
  <string name="setup_completion_time_in_millis">Setup Completion Time</string>
  <string name="secure_element_activation_timestamp_in_millis">Secure Element Activation Time</string>
  <string name="has_synced_instruments_once">Has Synced Instruments Once</string>
  <string name="wallet_package_name">Google Wallet Package Name</string>
  <string name="partner_config">Partner Configuration</string>
  <string name="secure_element_transaction_generation">Secure Element Transaction Generation</string>
  <string name="next_local_id">Next Local ID</string>
  <string name="state_transition_timestamp">State Transition Time</string>
  <string name="state_transition_delta_ms">State Transition Change in Time</string>
  <string name="pin">PIN</string>
  <string name="data">DATA</string>
  <string name="about">ABOUT</string>
  <string name="rebuild">Rebuild</string>
  <string name="prefs">Preferences</string>
  <string name="author">Joshua Rubin</string>
  <string name="your_pin_is">Your Google Wallet PIN Is:</string>
  <string name="demo_mode_enabled">Obscure personal information in the DATA screen</string>
  <string name="demo_mode_disabled">Personal information will not be obscured in the DATA screen</string>
  <string name="demo_mode">Demonstration Mode</string>
  <string name="data_preferences">Data Preferences</string>
  <string name="data_preferences_summary">Settings related to the display of the DATA screen</string>
  <string name="loading_wallet">Searching for Google Wallet&#8230;</string>
  <string name="loading_root">Verifying root access&#8230;</string>
  <string name="loading_copying">Copying Google Wallet data&#8230;</string>
  <string name="loading_cracking">Cracking Google Wallet PIN&#8230;</string>
  <string name="loaded">Loaded</string>
  <string name="ga_api_key">UA-27966737-1</string>
  <bool name="ga_debug">true</bool>
  <bool name="ga_dryRun">false</bool>
  <bool name="ga_anonymizeIp">false</bool>
  <integer name="ga_sampleRate">100</integer>
  <integer name="ga_dispatchPeriod">5</integer>
  <bool name="ga_auto_activity_tracking">true</bool>
  <string name="error_dialog_ok">OK</string>
  <string name="copyright">© 2012 Rubix Consulting, Inc.</string>
  <string name="email">joshua@rubixconsulting.com</string>
  <string name="licenses">Licenses</string>
  <string name="allrights">All rights reserved</string>
  <string name="license">Licensed under the terms of the GPLv3</string>
  <string name="seelicenses">Click \"Licenses\" in menu\nfor more licensing details</string>
  <color name="rubix_dark_blue">#FF072C3C</color>
  <color name="rubix_soft_gray">#FFD6D6D6</color>
  <color name="rubix_blue_text">#FF0077B2</color>
  <color name="rubix_text">#FF54514F</color>
  <string-array name="obscurable_fields">
      <item >wallet_uuid</item>
      <item >gaia_account</item>
      <item >originator_id</item>
      <item >local_id</item>
      <item >android_id</item>
      <item >cplc</item>
  </string-array>
  <string name="logo_description">Rubix Consulting, Inc. Logo</string>
  <string name="rubix_url">http://rubixconsulting.com</string>
  <string name="pref_disable_acra">Error Reporting</string>
  <string name="pref_acra_disabled">Disabled</string>
  <string name="pref_acra_enabled">Enabled</string>
  <string name="pref_acra_syslog">Syslog</string>
  <string name="pref_acra_syslog_enabled">Will be included</string>
  <string name="pref_acra_syslog_disabled">Will not be included</string>
  <string name="pref_acra_deviceid">Device ID</string>
  <string name="pref_acra_deviceid_enabled">Will be included</string>
  <string name="pref_acra_deviceid_disabled">Will not be included</string>
  <string name="pref_acra_user_email">Reply Email</string>
  <string name="pref_acra_user_email_summary">Optional email address for follow ups</string>
  <string name="error_reporting_preferences">Error Reporting</string>
  <string name="error_reporting_preferences_summary">Control if and what gets sent in error reports</string>
</resources>
